@@ -85,7 +85,8 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
                 .scorer(context);
 
         BulkScorer scorer =
-            new MaxScoreBulkScorer(context.reader().maxDoc(), Arrays.asList(scorer1, scorer2));
+            new MaxScoreBulkScorer(
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2), null);
 
         scorer.score(
             new LeafCollector() {
@@ -134,6 +135,141 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
     }
   }
 
+  public void testFilteredDisjunction() throws Exception {
+    try (Directory dir = newDirectory()) {
+      writeDocuments(dir);
+
+      try (IndexReader reader = DirectoryReader.open(dir)) {
+        IndexSearcher searcher = newSearcher(reader);
+
+        Query clause1 =
+            new BoostQuery(new ConstantScoreQuery(new TermQuery(new Term("foo", "A"))), 2);
+        Query clause2 = new ConstantScoreQuery(new TermQuery(new Term("foo", "C")));
+        Query filter = new TermQuery(new Term("foo", "B"));
+        LeafReaderContext context = searcher.getIndexReader().leaves().get(0);
+        Scorer scorer1 =
+            searcher
+                .createWeight(searcher.rewrite(clause1), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+        Scorer scorer2 =
+            searcher
+                .createWeight(searcher.rewrite(clause2), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+        Scorer filterScorer =
+            searcher
+                .createWeight(searcher.rewrite(filter), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+
+        BulkScorer scorer =
+            new MaxScoreBulkScorer(
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2), filterScorer);
+
+        scorer.score(
+            new LeafCollector() {
+
+              private int i;
+              private Scorable scorer;
+
+              @Override
+              public void setScorer(Scorable scorer) throws IOException {
+                this.scorer = scorer;
+              }
+
+              @Override
+              public void collect(int doc) throws IOException {
+                switch (i++) {
+                  case 0:
+                    assertEquals(0, doc);
+                    assertEquals(2, scorer.score(), 0);
+                    break;
+                  case 1:
+                    assertEquals(12288, doc);
+                    assertEquals(2 + 1, scorer.score(), 0);
+                    break;
+                  case 2:
+                    assertEquals(20480, doc);
+                    assertEquals(1, scorer.score(), 0);
+                    break;
+                  default:
+                    fail();
+                    break;
+                }
+              }
+            },
+            null,
+            0,
+            DocIdSetIterator.NO_MORE_DOCS);
+      }
+    }
+  }
+
+  public void testFilteredDisjunctionWithSkipping() throws Exception {
+    try (Directory dir = newDirectory()) {
+      writeDocuments(dir);
+
+      try (IndexReader reader = DirectoryReader.open(dir)) {
+        IndexSearcher searcher = newSearcher(reader);
+
+        Query clause1 =
+            new BoostQuery(new ConstantScoreQuery(new TermQuery(new Term("foo", "A"))), 2);
+        Query clause2 = new ConstantScoreQuery(new TermQuery(new Term("foo", "C")));
+        Query filter = new TermQuery(new Term("foo", "B"));
+        LeafReaderContext context = searcher.getIndexReader().leaves().get(0);
+        Scorer scorer1 =
+            searcher
+                .createWeight(searcher.rewrite(clause1), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+        Scorer scorer2 =
+            searcher
+                .createWeight(searcher.rewrite(clause2), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+        Scorer filterScorer =
+            searcher
+                .createWeight(searcher.rewrite(filter), ScoreMode.TOP_SCORES, 1f)
+                .scorer(context);
+
+        BulkScorer scorer =
+            new MaxScoreBulkScorer(
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2), filterScorer);
+
+        scorer.score(
+            new LeafCollector() {
+
+              private int i;
+              private Scorable scorer;
+
+              @Override
+              public void setScorer(Scorable scorer) throws IOException {
+                this.scorer = scorer;
+              }
+
+              @Override
+              public void collect(int doc) throws IOException {
+                switch (i++) {
+                  case 0:
+                    assertEquals(0, doc);
+                    assertEquals(2, scorer.score(), 0);
+                    scorer.setMinCompetitiveScore(Math.nextUp(2));
+                    break;
+                  case 1:
+                    assertEquals(12288, doc);
+                    assertEquals(2 + 1, scorer.score(), 0);
+                    scorer.setMinCompetitiveScore(Math.nextUp(2 + 1));
+                    break;
+                  default:
+                    System.out.println(i);
+                    fail();
+                    break;
+                }
+              }
+            },
+            null,
+            0,
+            DocIdSetIterator.NO_MORE_DOCS);
+      }
+    }
+  }
+
   public void testBasicsWithTwoDisjunctionClausesAndSkipping() throws Exception {
     try (Directory dir = newDirectory()) {
       writeDocuments(dir);
@@ -155,7 +291,8 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
                 .scorer(context);
 
         BulkScorer scorer =
-            new MaxScoreBulkScorer(context.reader().maxDoc(), Arrays.asList(scorer1, scorer2));
+            new MaxScoreBulkScorer(
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2), null);
 
         scorer.score(
             new LeafCollector() {
@@ -227,7 +364,7 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
 
         BulkScorer scorer =
             new MaxScoreBulkScorer(
-                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2, scorer3));
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2, scorer3), null);
 
         scorer.score(
             new LeafCollector() {
@@ -304,7 +441,7 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
 
         BulkScorer scorer =
             new MaxScoreBulkScorer(
-                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2, scorer3));
+                context.reader().maxDoc(), Arrays.asList(scorer1, scorer2, scorer3), null);
 
         scorer.score(
             new LeafCollector() {
@@ -505,7 +642,8 @@ public class TestMaxScoreBulkScorer extends LuceneTestCase {
     fox.cost = 900;
     fox.maxScore = 1.1f;
 
-    MaxScoreBulkScorer scorer = new MaxScoreBulkScorer(10_000, Arrays.asList(the, quick, fox));
+    MaxScoreBulkScorer scorer =
+        new MaxScoreBulkScorer(10_000, Arrays.asList(the, quick, fox), null);
     the.docID = 4;
     the.maxScoreUpTo = 130;
     quick.docID = 4;
